name:                beeminder-api
version:             1.0
synopsis:            Bindings to the beeminder.com JSON API
description:         <<https://www.beeminder.com/images/logo_hi.png>>
                     .
                     <http://beeminder.com> is a tool for incentivizing yourself to
                     accomplish your quantifiable goals.  This package
                     provides Haskell bindings to beeminder's JSON API.
license:             BSD3
license-file:        LICENSE
author:              Daniel Wagner
maintainer:          daniel@wagner-home.com, byorgey@gmail.com
bug-reports:         http://github.com/dmwit/beeminder-api/issues
copyright:           Copyright (C) 2013 Daniel Wagner
category:            Network
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  CHANGES.markdown, README.markdown

source-repository head
  type: git
  location: http://github.com/dmwit/beeminder-api.git

library
  exposed-modules:   Network.Beeminder
  other-modules:     Network.Beeminder.Internal,
                     Data.Aeson.Encode.Shim
  build-depends:
    base >= 4.5 && < 4.8,
    mtl >= 2.1 && < 2.2,
    aeson >= 0.7 && < 0.8,
    scientific >= 0.2 && < 0.3,
    attoparsec >= 0.10 && < 0.12,
    conduit >= 0.5 && < 1.1,
    data-default-class ==0.0.*,
    http-conduit >= 2 && < 2.1,
    vector >= 0.10 && < 0.11,
    containers >= 0.5 && < 0.6,
    unordered-containers >= 0.2.3 && < 0.3,
    bytestring >= 0.10 && < 0.11,
    blaze-builder >= 0.3 && < 0.4,
    http-types >= 0.8 && < 0.9,
    universe >= 0.5 && < 0.6,
    time >= 1.4 && < 1.5,
    text >= 0.11 && < 1.2,
    transformers >= 0.3 && < 0.4,
    transformers-base >= 0.4 && < 0.5,
    lens >= 3.9 && < 4.1,
    monad-control >= 0.3 && < 0.4

  default-language: Haskell2010