name:                beeminder-api
version:             1.0.1
synopsis:            Bindings to the beeminder.com JSON API
description:         <<https://www.beeminder.com/images/logo_hi.png>>
                     .
                     <http://beeminder.com> is a tool for incentivizing yourself to
                     accomplish your quantifiable goals.  This package
                     provides Haskell bindings to beeminder's JSON API.
license:             BSD3
license-file:        LICENSE
author:              Daniel Wagner
maintainer:          daniel@wagner-home.com, byorgey@gmail.com
bug-reports:         http://github.com/dmwit/beeminder-api/issues
copyright:           Copyright (C) 2013 Daniel Wagner
category:            Network
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  CHANGES.markdown, README.markdown

source-repository head
  type: git
  location: http://github.com/dmwit/beeminder-api.git

library
  exposed-modules:   Network.Beeminder
  other-modules:     Network.Beeminder.Internal,
                     Data.Aeson.Encode.Shim
  build-depends:
    base >= 4.5 && < 4.10,
    mtl >= 2.1 && < 2.3,
    aeson >= 0.11 && < 1.2,
    scientific >= 0.3 && < 0.4,
    attoparsec >= 0.10 && < 0.14,
    conduit >= 0.5 && < 1.3,
    data-default-class < 0.2,
    http-client >= 0.5 && < 0.6,
    http-conduit >= 2.1.11 && < 2.3,
    vector >= 0.10 && < 0.13,
    containers >= 0.5 && < 0.6,
    unordered-containers >= 0.2.3 && < 0.3,
    bytestring >= 0.10 && < 0.11,
    blaze-builder >= 0.3 && < 0.5,
    http-types >= 0.8 && < 0.10,
    universe >= 1.0 && < 1.1,
    universe-base >= 1.0 && < 1.1,
    time >= 1.4 && < 1.7,
    text >= 0.11 && < 1.3,
    transformers >= 0.3 && < 0.6,
    transformers-base >= 0.4 && < 0.5,
    lens >= 3.9 && < 4.16,
    monad-control >= 0.3 && < 1.1,
    resourcet >= 1.1.1 && < 1.2

  default-language: Haskell2010